--- a/src/scss/elements/_structure.scss
+++ b/src/scss/elements/_structure.scss
@@ -54,3 +54,35 @@
   }
 
 }
+
+.sub-grid {
+  display: grid;
+  grid-row-gap: 30px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 70px;
+  grid-template-areas:
+  "header   header    header    header"
+  "intro    intro     intro     intro"
+  "aside    image     image     description"
+  "aside    gallery   gallery   gallery"
+  ;
+}
+
+.grid-header{grid-area: header;}
+.grid-intro{grid-area: intro;}
+.grid-aside{grid-area: aside;}
+.grid-image{grid-area: image;}
+.grid-description{grid-area: description;}
+.grid-gallery{grid-area: gallery;}
+
+@media screen and (max-width: $vw-large){
+  .sub-grid{
+    grid-template-areas:
+    "header   header    header        header"
+    "intro    intro     intro         intro"
+    "image    image     description   description"
+    "aside    aside     aside         aside"
+    "gallery  gallery   gallery       gallery"
+    ;
+  }
+}
