--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,7 +42,9 @@
 @import "components/section-image";
 @import "components/section-message";
 @import "components/section-title";
+@import "components/section-gallery";
 @import "components/button";
+@import "components/aside";
 
 
 
